# synheart-behavior-dart

./: .gitignore  .pubignore  CHANGELOG.md  CONTRIBUTING.md  EXAMPLE_APP_GUIDE.md  PERFORMANCE_PROFILING.md  PRIVACY_AUDIT.md  README.md  SYNHEART_FLUX_INTEGRATION.md  analysis_options.yaml  features.txt  pubspec.yaml
android/: build.gradle
android/src/main/cpp/: CMakeLists.txt  flux_jni_bridge.cpp
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/assets/models/: label_mapping.json
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: synheart_behavior.podspec
ios/Classes/: AttentionSignalCollector.swift  BehaviorSDK.swift  CallCollector.swift  FluxBridge.swift  GestureCollector.swift  InputSignalCollector.swift  MotionFeatureExtractor.swift  MotionSignalCollector.swift  NotificationCollector.swift  PerformanceMonitor.swift  StatsCollector.swift  SynheartBehaviorPlugin.swift
lib/: synheart_behavior.dart
lib/src/: behavior_feature_extractor.dart  behavior_gesture_detector.dart  behavior_window_aggregator.dart  flux_bridge.dart  motion_state_inference.dart  synheart_behavior.dart
test/: synheart_behavior_test.dart
test/integration/: platform_channel_test.dart
test/models/: behavior_config_test.dart  behavior_event_test.dart  behavior_session_test.dart  behavior_stats_test.dart
(+26 files in other folders)
